rendering graph map in the modal, blurriness issue

--- a/fe/map_client/src/components/single-graph-view/body/graph-map/Mymap.css
+++ b/fe/map_client/src/components/single-graph-view/body/graph-map/Mymap.css
@@ -1,4 +1,9 @@
-#mapid {height: 800px}
+#mapid {
+    height: 85vh;
+    width: 85vw;
+    /*height: 700px;*/
+    /*width: 700px;*/
+}
 
 .infotile {display: flex;}
 .infotile div {
